# Physical_AI_Book

./: .env.example  .env.production  .gitignore  .vercel-deploy-trigger  .vercel-rebuild  DEPLOYMENT_GUIDE.md  MODULE3_PROGRESS.txt  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js  vercel.json
.github/workflows/: build-test.yml  deploy.yml  lint.yml  test.yml  validate.yml
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  =1.0.0  README.md  agent.py  api.py  main.py  pyproject.toml  retrieve.py
docs/: intro.md
docs/module-1-ros2/: ch1-ros2-basics.md  ch2-rclpy-control.md  ch3-urdf-humanoids.md
docs/module-2-digital-twin/: VALIDATION_CHECKLIST.md
docs/module-3-isaac/: ch1-isaac-sim-basics.md  ch2-synthetic-data-generation.md  ch3-vslam-isaac-ros.md  ch4-depth-perception-mapping.md  ch5-nav2-integration.md  ch6-end-to-end-capstone.md
docs/module-4-vla/: ch1-vla-fundamentals.md
docs/research-papers/: ai-classroom-efficiency-k12.md
scripts/: requirements.txt  test_code_examples.py  validate_all.py  validate_examples.py  validate_imports.py  validate_module3_examples.py  validate_urdf.py
specs/001-ros2-basics/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/002-digital-twin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-isaac-brain/: plan.md  spec.md  tasks.md
specs/004-vla-models/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-ai-classroom-research/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
(+129 files in other folders)
