[project]
name = "embedding-pipeline"
version = "0.1.0"
description = "RAG embedding pipeline for Physical AI Textbook"
requires-python = ">=3.10"
dependencies = [
    "cohere>=5.0.0",
    "qdrant-client>=1.7.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "lxml>=4.9.0",
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
